Rewards page wave alignment fixes on ways to earn section

--- a/assets/ways-to-earn.css
+++ b/assets/ways-to-earn.css
@@ -329,7 +329,7 @@ input[type=number] {
         margin-top: 44px;
     }
     .ways-to-earn-section .wave--top {
-        top: -33px;
+        top: -32px;
     }
     .ways-to-earn-items {
         min-width: 280px;
